src/test/resources/extension/invalid/newtype/typeSameName.awsl
begin

newtype Copy is
    int value;
end

newtype Copy is
    char value;
end

exit 0;

end